--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="left-side-nav">
         <ul>
             <li onclick="window.location.href='../index.html'">Home</li>
-            <li onclick="window.location.href='/pages/meet_the_team.html'">Activities</li>
+            <li onclick="window.location.href='pages/meet_the_team.html'">Activities</li>
             <li>Prices</li>
         </ul>
     </div>
