--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="first-footer-section">
             <h3>About</h3>
             <h4>Our Gym</h4>
-            <h4><a href="/pages/meet_the_team.html">Meet the Team</a></h4>
+            <h4><a href="pages/meet_the_team.html">Meet the Team</a></h4>
         </div>
 
         <div class="second-footer-section">
