--- a/pages/meet_the_team.html
+++ b/pages/meet_the_team.html
@@ -252,7 +252,7 @@
 
         <div class="third-footer-section">
             <h3>Contact</h3>
-            <h4>Email: info@dentistclinic.com</h4>
+            <h4>Email: info@gym.com</h4>
             <h4>Phone: +1 234 567 890</h4>
             <h4>Address: 123 Smile Street, City</h4>
 
