Everything done i hope

--- a/pages/meet_the_team.html
+++ b/pages/meet_the_team.html
@@ -38,8 +38,8 @@
     <div class="left-side-nav">
         <ul>
             <li onclick="window.location.href='../index.html'">Home</li>
-            <li onclick="window.location.href='pages/meet_the_team.html'">Activities</li>
-            <li>Prices</li>
+            <li onclick="window.location.href='meet_the_team.html'">Activities</li>
+            <li onclick="window.location.href='our_gym.html'">Meet us</li>
         </ul>
     </div>
 </div>
@@ -238,16 +238,8 @@
     <div class="footer">
         <div class="first-footer-section">
             <h3>About</h3>
-            <h4>Our Gym</h4>
-            <h4><a href="pages/meet_the_team.html">Meet the Team</a></h4>
-        </div>
-
-        <div class="second-footer-section">
-            <h3>Services</h3>
-            <h4>Boxing</h4>
-            <h4>Something</h4>
-            <h4>Something Else</h4>
-            <h4>Something else else</h4>
+            <h4><a href="our_gym.html">Our Gym</a></h4>
+            <h4><a href="meet_the_team.html">Meet the Team</a></h4>
         </div>
 
         <div class="third-footer-section">
