--- a/pages/our_gym.html
+++ b/pages/our_gym.html
@@ -101,8 +101,8 @@
     <div class="footer">
         <div class="first-footer-section">
             <h3>About</h3>
-            <h4><a href="pages/our_gym.html">Our Gym</a></h4>
-            <h4><a href="pages/meet_the_team.html">Meet the Team</a></h4>
+            <h4><a href="our_gym.html">Our Gym</a></h4>
+            <h4><a href="meet_the_team.html">Meet the Team</a></h4>
         </div>
 
         <div class="third-footer-section">
