Last one i think

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <div class="left-side-nav">
         <ul>
             <li onclick="window.location.href='../index.html'">Home</li>
-            <li onclick="window.location.href='pages/meet_the_team.html'">Activities</li>
+            <li onclick="window.location.href='pages/meet_the_team.html'">Meet the team</li>
             <li onclick="window.location.href='pages/our_gym.html'">Meet us</li>
+            <li onclick="window.location.href='pages/activities.html'">Activities</li>
         </ul>
     </div>
 </div>
@@ -180,6 +181,7 @@
             <h3>About</h3>
             <h4><a href="pages/our_gym.html">Our Gym</a></h4>
             <h4><a href="pages/meet_the_team.html">Meet the Team</a></h4>
+            <h4><a href="pages/activities.html">Activities</a></h4>
         </div>
 
         <div class="third-footer-section">
