--- a/pages/meet_the_team.html
+++ b/pages/meet_the_team.html
@@ -38,8 +38,9 @@
     <div class="left-side-nav">
         <ul>
             <li onclick="window.location.href='../index.html'">Home</li>
-            <li onclick="window.location.href='meet_the_team.html'">Activities</li>
+            <li onclick="window.location.href='meet_the_team.html'">Meet the team</li>
             <li onclick="window.location.href='our_gym.html'">Meet us</li>
+            <li onclick="window.location.href='activities.html'">Activities</li>
         </ul>
     </div>
 </div>
@@ -58,6 +59,9 @@
             <p style="margin-top: 5px;">Our team of qualified professionals ensures comfort and safety at every appointment</p>
         </div>
     </div>
+</div>
+
+<div class="cards-container">
     <div class="card">
         <img src="../images/pfp2.jpg" alt="">
         <div class="card-content">
@@ -76,160 +80,35 @@
     </div>
 </div>
 
+<div class="cards-container">
+<div class="card">
+        <img src="../images/pfp2.jpg" alt="">
+        <div class="card-content">
+            <h3>Jane Doe</h3>
+            <h4>Cargo</h4>
+            <p>Our team of qualified professionals ensures comfort and safety at every appointment</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../images/pfp3.jpg" alt="">
+        <div class="card-content">
+            <h3>Jimmy James</h3>
+            <h4>Cargo</h4>
+            <p>Schedule your first appointment and enjoy a free evaluation and a personalized plan for your smile.</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../images/pfp1.jpg" alt="">
+        <div class="card-content">
+            <h3>Gerald Jenkins</h3>
+            <h4>Cargo</h4>
+            <p style="margin-top: 5px;">Our team of qualified professionals ensures comfort and safety at every appointment</p>
+        </div>
+    </div>
+</div>
 
 </section>
 
-<section>
-
-    <div class="activity-section">
-        <h1>Activities</h1>
-        <h4>Besides offering the basic gym activities, we also have:</h4>
-    </div>
-
-
-    <div class="second-cards-container">
-    <div class="second-card">
-        <img src="../images/mobility.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Mobility</h3>
-            <p>Workouts focused on flexibility and joint health to keep you agile and pain-free.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="../images/boxing.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Box</h3>
-            <p>High-energy boxing sessions to improve technique, speed, and endurance.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="images/patient.jpg" alt="">
-        <div class="second-card-content">
-            <h3>CrossTraining</h3>
-            <p>High-intensity full-body workouts combining strength, cardio, and functional movements.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="../images/zumba.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Zumba</h3>
-            <p>Fun and energetic dance workouts to burn calories and boost your mood.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-</div>
-    <div class="second-cards-container">
-    <div class="second-card">
-        <img src="../images/cardio.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Cycle</h3>
-            <p>Cardio-focused indoor cycling sessions to boost endurance and burn calories.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="../images/gap.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Gap</h3>
-            <p>Targeted workouts for Glutes, Abs, and Legs to tone and strengthen key muscle groups.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="../images/pilates.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Pilates</h3>
-            <p>Low-impact workouts focusing on core strength, flexibility, and overall body control.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="../images/abs.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Abs</h3>
-            <p>Focused abdominal workouts to strengthen your core and define your abs.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-</div>
-
-    <div class="second-cards-container">
-    <div class="second-card">
-        <img src="../images/pump.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Pump</h3>
-            <p>Intense strength and resistance workouts to tone your body and build muscle.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-        <img src="../images/stretching.jpg" alt="">
-        <div class="second-card-content">
-            <h3>Stretching</h3>
-            <p>Gentle sessions to improve flexibility, relieve tension, and enhance overall mobility.</p>
-            <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-        </div>
-    </div>
-    <div class="second-card">
-    <img src="../images/3b.jpg" alt="">
-    <div class="second-card-content">
-        <h3>3B</h3>
-        <p>Full-body workouts targeting glutes, arms, and abs for toning and strength.</p>
-        
-        <ul class="schedule">
-            <li>Monday: 8:00 AM - 9:00 AM</li>
-            <li>Wednesday: 6:00 PM - 7:00 PM</li>
-            <li>Friday: 7:00 AM - 8:00 AM</li>
-        </ul>
-
-    </div>
-</div>
-
-</div>
-</section>
 
 
 <section>
@@ -240,6 +119,7 @@
             <h3>About</h3>
             <h4><a href="our_gym.html">Our Gym</a></h4>
             <h4><a href="meet_the_team.html">Meet the Team</a></h4>
+            <h4><a href="activities.html">Activities</a></h4>
         </div>
 
         <div class="third-footer-section">
