--- a/pages/our_gym.html
+++ b/pages/our_gym.html
@@ -38,8 +38,9 @@
     <div class="left-side-nav">
         <ul>
             <li onclick="window.location.href='../index.html'">Home</li>
-            <li onclick="window.location.href='meet_the_team.html'">Activities</li>
+            <li onclick="window.location.href='meet_the_team.html'">Meet the team</li>
             <li onclick="window.location.href='our_gym.html'">Meet us</li>
+            <li onclick="window.location.href='activities.html'">Activities</li>
         </ul>
     </div>
 </div>
